k8s/40_ingress.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: extreme-startup
  namespace: extreme-startup
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  tls:
    - secretName: tls-wildcard-hsnb-io
  rules:
  - host: extreme-startup.hsnb.io
    http:
      paths:
      - backend:
          serviceName: extreme-startup
          servicePort: 80
